# gam_ssm_lur

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.html  CONTRIBUTING.md  LICENSE  Makefile  README.html  README.md  REFACTORING_PLAN.md  RESPONSE_TO_REVIEWERS.html  RESPONSE_TO_REVIEWERS.md  install.bat  profile.out  pyproject.toml  reproduce.bat  requirements-lock.txt  requirements.txt
.tools/: tropomi_epa_scatter.py
README_files/libs/bootstrap/: bootstrap-fe23b1f7988a21bfbf27d79248ee042a.min.css
_deprecated/: feature_extractor.py
examples/: 01_basic_usage.py  03_model_comparison.py  gridded_maps.py  mapping_utils.py  profile_performance.py  reproduce_paper.py  visualization_demo.py
experiments/: 01_basic_usage.py  03_model_comparison.py  README_REGENERATE.md  baselines.py  buffer_ablation.py  component_ablations.py  forecast_and_k.py  gridded_maps.py  mapping_utils.py  ml_geo_benchmarks.py  nested_loocv.py  output_utils.py  profile_performance.py  regenerate_figures.py  reproduce_paper.py  study_area_map.py
pipeline/: evaluate.py  features.py  figures.py
scripts/: check_no_ai_attribution.sh  tropomi_epa_scatter.py
src/gam_ssm_lur/: __init__.py  cli.py  data.py  data_check.py  em_estimator.py  evaluation.py  features.py  fetch_data.py  hybrid_model.py  kalman.py  spatial_gam.py  state_space.py  traffic_field.py  utils.py  visualization.py
src/gam_ssm_lur/helpers/: feature_extractor.py
src/gam_ssm_lur/inference/: __init__.py  em.py  kalman.py  smoother.py
src/gam_ssm_lur/models/: __init__.py  base.py  hybrid.py  spatial_gam.py  state_space.py
tests/: conftest.py  test_em_estimator.py  test_hybrid_fit_from_dataset.py  test_hybrid_model.py  test_kalman.py  test_state_space.py
