[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gam-ssm-lur"
version = "0.1.0"
description = "Hybrid Generalized Additive Model - State Space Model for Land Use Regression"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Gabriel Oduori", email = "gabriel.oduori@ucd.ie"},
    {name = "Chiara Cocco"},
    {name = "Payam Sajadi"},
    {name = "Francesco Pilla"},
]
keywords = [
    "air-quality",
    "land-use-regression",
    "state-space-models",
    "kalman-filter",
    "spatiotemporal-modeling",
    "NO2",
    "urban-pollution",
    "GAM",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "requests>=2.28.0",
    "geopandas>=0.10.0",
    "pygam>=0.8.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "shapely>=1.8.0",
    "pyproj>=3.2.0",
    "tqdm>=4.62.0",
    "shap>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "ruff>=0.0.260",
    "mypy>=0.950",
    "pre-commit>=2.17.0",
]
docs = [
    "sphinx>=4.4.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.17.0",
]
osm = [
    "osmnx>=1.2.0",
]
satellite = [
    "earthengine-api>=0.1.300",
]

[project.urls]
Homepage = "https://github.com/GabrielOduori/lur_space_state_model"
Documentation = "https://github.com/GabrielOduori/lur_space_state_model#readme"
Repository = "https://github.com/GabrielOduori/lur_space_state_model"
Issues = "https://github.com/GabrielOduori/lur_space_state_model/issues"

[project.scripts]
gam-ssm-train = "gam_ssm_lur.cli:train"
gam-ssm-predict = "gam_ssm_lur.cli:predict"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hatch
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=gam_ssm_lur --cov-report=term-missing"

[tool.coverage.run]
source = ["src/gam_ssm_lur"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
